test_regress/t/t_config_rules.out
%Error-UNSUPPORTED: t/t_config_rules.v:33:3: Unsupported: config inst use rule
   33 |   instance t.m20 liblist;   
      |   ^~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_config_rules.v:34:3: Unsupported: config inst liblist rule
   34 |   instance t.m21 liblist libc;
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:35:3: Unsupported: config inst liblist rule
   35 |   instance t.m22 liblist libc libd;   
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:36:3: Unsupported: config inst liblist rule
   36 |   instance t.m23 liblist libc libd;   
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:37:3: Unsupported: config inst liblist rule
   37 |   instance t.m24 liblist libc libd;   
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:40:3: Unsupported: config inst use rule
   40 |   instance t.m30 use cell_identifier;
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:41:3: Unsupported: config inst use rule
   41 |   instance t.m31 use lib_id.cell_id;
      |   ^~~~~~~~
%Error-UNSUPPORTED: t/t_config_rules.v:42:3: Unsupported: config inst use rule
   42 |   instance t.m32 use #();
      |   ^~~~~~~~
%Error: Exiting due to
